--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -5,3 +5,4 @@
 <p><%= @portfolio_item.body %></p>
 
 <%= link_to "Edit", edit_portfolio_path(@portfolio_item) %>
+<%= link_to "Delete", @portfolio_item, method: :delete, data: { confirm: 'Are you sure? '} %>
