--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <%= link_to "Edit", edit_user_registration_path %>
+    <% else %>
+      <%= link_to "login", new_user_session_path %>
+      <%= link_to "register", new_user_registration_path %>
+    <%end %>
+
     <%= yield %>
+    <% if session[:source] %>
+      Thanks for visiting me from <%= session[:source] %>
+    <% end %>
+
   </body>
 </html>
