--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -14,3 +14,6 @@
 
 <%= link_to "Edit", edit_portfolio_path(@portfolio_item) %>
 <%= link_to "Delete", @portfolio_item, method: :delete, data: { confirm: 'Are you sure? '} %>
+
+<%= params.inspect %>
+<%= session.inspect %>
