added Bootstrap framework

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,10 @@
 <h1>Page#about</h1>
 <p>Find me in app/views/page/about.html.erb</p>
+number_to_phone 5555555555 <br>
+<%= number_to_phone "5555555555" %> <br>
+number_to_phone 15555555555 <br>
+<%= number_to_phone "15555555555" %> <br>
+number_to_percentage "20" <br>
+<%= number_to_percentage "20" %> <br>
+number_to_currency "20"
+<%= number_to_currency "20",  precision: 0 %> <br>
