--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Devcamp</title>
+    <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,18 +13,12 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if user_signed_in? %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-      <%= link_to "Edit", edit_user_registration_path %>
-    <% else %>
-      <%= link_to "login", new_user_session_path %>
-      <%= link_to "register", new_user_registration_path %>
-    <%end %>
+    <%= render 'shared/nav' %>
+    <div class="container">
+      <%= login_helper %>
+      <%= yield %>
 
-    <%= yield %>
-    <% if session[:source] %>
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
-
+      <%= session_helper %>
+    </div>
   </body>
 </html>
