--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <h1>Page#home</h1>
 <h3>Hi, <%= current_user.first_name if user_signed_in? %> </h3>
 <p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <%= @blogs.inspect %>
 
-<%= @blogs.inspect %>
+  <%= @skills.inspect %>
+</div>
 
-<%= @skills.inspect %>
+
+
+<hr>
