Petergate Gem added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
     <div class="container">
       <%= login_helper %>
       <%= yield %>
-
       <%= session_helper %>
+      <%= copyright_generator %> 
+
     </div>
   </body>
 </html>
