--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Portfolio</h1>
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path  if logged_in?(:site_admin)%>
 
-<%= render @portfolio_item %>
+<%= render 'portfolios/portfolio_item' %>
