--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,22 @@
   </head>
 
   <body>
+
+
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <%= render 'shared/nav' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render 'shared/nav' %>
-    <div class="container">
-      <%= login_helper %>
+
       <%= yield %>
       <%= session_helper %>
-      <%= copyright_generator %> 
 
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+        <%= copyright_generator %>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
