--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,11 @@
-<div>
-  <div><%= link_to "Home", root_path %></div>
-  <div><%= link_to "Portfolios", portfolios_path %></div>
-  <div><%= link_to "Blogs", blogs_path %></div>
-
-</div>
+<header class="masthead mb-auto">
+  <div class="inner">
+    <h3 class="masthead-brand">Cover</h3>
+    <nav class="nav nav-masthead justify-content-center">
+      <%= link_to "Home", root_path, class: "nav-link" %>
+      <%= link_to "Portfolios", portfolios_path,class: "nav-link" %>
+      <%= link_to "Blogs", blogs_path, class: "nav-link" %>
+      <%= login_helper %>
+    </nav>
+  </div>
+</header>
